# waypin

./: Cargo.toml  LICENSE  PKGBUILD  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: clipboard_mock.rs  integration_tests.rs
