[package]
name = "waypin"
version = "0.1.6"
edition = "2021"
authors = ["Ivan Potiienko <contact@xxanqw.pp.ua>"]
description = "A clipboard viewer for Wayland/X11 with GTK3"
license = "GPL-3.0"
repository = "https://github.com/xxanqw/waypin"

[[bin]]
name = "waypin"
path = "src/main.rs"

[lib]
name = "waypin_lib"
path = "src/lib.rs"

[dependencies]
gtk = "0.18.2"

[dev-dependencies]
tempfile = "3.20"

[features]
default = []
gui-tests = []

[profile.test]
opt-level = 1